// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Analytics Component > Snapshot Testing > should match snapshot for admin role 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center m-6 overflow-hidden h-[calc(100vh-100px)]"
  >
    <div
      data-testid="org-analytics"
    >
      OrgAnalytics
    </div>
  </div>
</DocumentFragment>
`;

exports[`Analytics Component > Snapshot Testing > should match snapshot for counsellor role 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center m-6 overflow-hidden h-[calc(100vh-100px)]"
  >
    <div
      data-testid="user-analytics"
    >
      UserAnalytics
    </div>
  </div>
</DocumentFragment>
`;

exports[`Analytics Component > Snapshot Testing > should match snapshot for super admin role 1`] = `
<DocumentFragment>
  <div
    class="flex items-center justify-center m-6 overflow-hidden h-[calc(100vh-100px)]"
  >
    <div
      data-testid="org-analytics"
    >
      OrgAnalytics
    </div>
  </div>
</DocumentFragment>
`;
